# casper-trade

./: .env.sample  .gitignore  CASPER_BACKEND_TEST_ANALYSIS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Odra.toml  README.md  TESTNET.md  USAGE.md  justfile
.github/ISSUE_TEMPLATE/: config.yml
.node-keys/: secret_key.pem  secret_key_1.pem
casper_trade_contracts/: Cargo.toml
casper_trade_contracts/src/: casper_trade_callee.rs  casper_trade_v2_pair.rs  factory.rs  lib.rs  pair.rs  router.rs  sample_tokens.rs  utils.rs
casper_trade_contracts/src/casper_trade_v2_pair/: errors.rs
casper_trade_contracts/src/pair/: errors.rs  events.rs
casper_trade_contracts/src/router/: errors.rs
casper_trade_contracts/tests/: Audit Report.md  hal-01.rs  hal-02.rs  hal-03.rs  hal-04.rs  hal-05.rs  hal-06.rs  hal-07.rs  hal-09.rs  liquidity.rs
casper_trade_contracts/tests/common/: mod.rs
casperswap_contracts/: Cargo.toml  ROUTER_IMPLEMENTATION.md  TEST_RESULTS.md
casperswap_contracts/src/: casperswap_callee.rs  casperswap_v2_library.rs  casperswap_v2_pair.rs  factory.rs  lib.rs  router.rs  sample_tokens.rs  utils.rs
casperswap_contracts/src/casperswap_v2_pair/: errors.rs  events.rs
casperswap_contracts/src/router/: errors.rs
casperswap_contracts/wasm/: WrappedNativeToken.wasm
cli/: Cargo.toml  README.md  cli.rs
cli/scenarios/: add_liquidity.rs  add_liquidity_cspr.rs  add_wcspr.rs  create_pair.rs  deploy_wcspr.rs  mint_tokens.rs  mod.rs  new_token.rs  setup_pair.rs  setup_samples.rs  swap_tokens.rs  upgrade_factory.rs  upgrade_pairs.rs  utils.rs
resources/: casper-net-1-contracts.toml  casper-test-contracts.toml  contracts.toml
resources/casper_contract_schemas/: casper_tradev2_pair_factory_schema.json  casper_tradev2_pair_schema.json  casper_tradev2_router_schema.json  factory_schema.json  pair_factory_schema.json  pair_schema.json  router_schema.json  sample_token_schema.json
resources/legacy/: casper_tradev2_pair_factory_schema.json  casper_tradev2_pair_schema.json  casper_tradev2_router_schema.json  factory_schema.json  pair_factory_schema.json  pair_schema.json  router_schema.json  sample_token_schema.json
wasm/: Factory.wasm  Pair.wasm  PairFactory.wasm  Router.wasm  SampleToken.wasm  WrappedNativeToken.wasm
