[workspace]
members = [
    "cli",
    "casper_trade_contracts",
]
resolver = "2"

[workspace.dependencies]
odra = { git = "https://github.com/odradev/odra", branch = "feature/mutable-container-in-cli", features = [], default-features = false }
odra-test = { git = "https://github.com/odradev/odra", branch = "feature/mutable-container-in-cli", features = [], default-features = false }
odra-build = { git = "https://github.com/odradev/odra", branch = "feature/mutable-container-in-cli", features = [], default-features = false }
odra-cli = { git = "https://github.com/odradev/odra", branch = "feature/mutable-container-in-cli", features = [], default-features = false }
odra-modules = { git = "https://github.com/odradev/odra", branch = "feature/mutable-container-in-cli", features = [], default-features = false }

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3
