[workspace]
members = [
    "cli",
    "casper_trade_contracts",
]
resolver = "2"

[workspace.dependencies]
#odra = { git = "https://github.com/Vodradev/odra", branch = "release/2.4.1", features = [], default-features = false }
#odra-test = { git = "https://github.com/odradev/odra", branch = "release/2.4.1", features = [], default-features = false }
#odra-build = { git = "https://github.com/odradev/odra", branch = "release/2.4.1", features = [], default-features = false }
#odra-cli = { git = "https://github.com/odradev/odra", branch = "release/2.4.1", features = [], default-features = false }
#odra-modules = { git = "https://github.com/odradev/odra", branch = "release/2.4.1", features = [], default-features = false }

odra = { path = "../odra/odra/odra", features = [], default-features = false }
odra-test = { path = "../odra/odra/odra-test", features = [], default-features = false }
odra-build = { path = "../odra/odra/odra-build", features = [], default-features = false }
odra-cli = { path = "../odra/odra/odra-cli", features = [], default-features = false }
odra-modules = { path = "../odra/odra/modules", features = [], default-features = false }

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3
